# UrbHealth

./: .gitignore  .renvignore  HGAM-trial.html  HGAM-trial.qmd  MXDnational.py  README.md  RFlocal.py  RFnational.py  pyproject.toml
NTNExposureMap/: NTNE_Map_README.docx
statefiles/: Alabama.xlsx  Alaska.xlsx  Arizona.xlsx  Arkansas.xlsx  California.xlsx  Colorado.xlsx  Connecticut.xlsx  District of Columbia.xlsx  Florida.xlsx  Georgia.xlsx  Hawaii.xlsx  Idaho.xlsx  Illinois.xlsx  Indiana.xlsx  Iowa.xlsx  Kansas.xlsx  Kentucky.xlsx  Louisiana.xlsx  Maine.xlsx  Maryland.xlsx  Massachusetts.xlsx  Michigan.xlsx  Minnesota.xlsx  Mississippi.xlsx  Missouri.xlsx  Montana.xlsx  Nevada.xlsx  New Hampshire.xlsx  New Jersey.xlsx  New Mexico.xlsx  New York.xlsx  North Carolina.xlsx  North Dakota.xlsx  Ohio.xlsx  Oklahoma.xlsx  Oregon.xlsx  Pennsylvania.xlsx  Rhode Island.xlsx  South Carolina.xlsx  South Dakota.xlsx  (+9 more)
